[package]
name = "slog-fmtstream"
version = "0.1.0"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
description = "#[no_std] streamer for slog-rs"
keywords = ["log", "logging", "structured", "no_std"]
license = "MPL-2.0/MIT/Apache-2.0"
documentation = "https://docs.rs/slog-fmtstream"
homepage = "https://github.com/slog-rs/slog"
repository = "https://github.com/slog-rs/fmtstream"
readme = "../../README.md"

[lib]
path = "lib.rs"

[dependencies]
slog = { version = "1.0.0-alpha6", default-features = false }
